fix bordder-radius on safari

--- a/src/assets/stylesheets/layout.scss
+++ b/src/assets/stylesheets/layout.scss
@@ -220,12 +220,21 @@ h6 {
       display: block;
       max-width: 460px;
       max-height: 460px;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
       border-radius: 50%;
+      -khtml-border-radius: 50%;
       color: #fff;
       text-align: center;
       font-size: 8em;
       line-height: 2em;
       margin: 0 auto;
+      img {
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        border-radius: 50%;
+        -khtml-border-radius: 50%;
+      }
     }
   }
 }
